--- a/yaml_files/include/cosmo_nuisance_params.yaml
+++ b/yaml_files/include/cosmo_nuisance_params.yaml
@@ -7,7 +7,5 @@
 ##########################################################################
 
 M_AbsMag_SNe:
-  prior_type: gaussian
-  range: [-19.032,-19.008]
-  mean: [-19.3]
-  sigs: [0.004]
+  prior_type: flat
+  range: [-20,-18]
