New capability: Omega_m (maybe usefull derived LCDM parameter)

--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -127,6 +127,11 @@ ObsLikes:
     module:       CosmoBit
     type:         double
 
+  - purpose:      Observable
+    capability:   Omega_m
+    module:       CosmoBit
+    type:         double
+
 #======== Rule entries ========
 Rules:
 
