--- a/yaml_files/CosmoBit_testSNe.yaml
+++ b/yaml_files/CosmoBit_testSNe.yaml
@@ -70,6 +70,11 @@ ObsLikes:
     module:       CosmoBit
     type:         double
 
+  - purpose:      Observable
+    capability:   Omega_m
+    module:       CosmoBit
+    type:         double
+
 #======== Rule entries ========
 Rules:
   
