--- a/yaml_files/include/TestDecayingDM_scan.yaml
+++ b/yaml_files/include/TestDecayingDM_scan.yaml
@@ -5,13 +5,21 @@
 ## 2019, Feb
 ##########################################################################
 
-mass: # mass in eV
-  range: [0.01, 100]
+# mass in GeV
+mass:
+  range: [1e-2, 1e4]
   prior_type: log
+
+# BR of decay int e+ e- (1 -BR is decay into photons)
 BR:
   range: [0.0, 1.0]
+
+# lifetime in s
 lifetime:
-  range: [1e16, 1e18]
+  range: [1e14, 1e18]
   prior_type: log
+
+# (initial) fraction of decaying species to all of omega_cdm
 fraction:
-  range: [0.0, 1.0]
+  range: [1e-12, 1e-6]
+  prior_type: log
