--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -25,6 +25,7 @@ Parameters:
  
  # --- import model parameters for models to scan over ---
  LCDM: !import include/LCDM_scan.yaml        # base LCDM
+ #LCDM_ExtdNeffCMB: !import include/LCDM_ExtdNeffCMB_scan.yaml       
  #LCDM_dNeffCMB: !import include/LCDM_dNeffCMB_scan.yaml
  #LCDM_dNeffCMB_dNeffBBN: !import include/LCDM_dNeffCMB_dNeffBBN_scan.yaml
  #LCDM_dNeffCMB_dNeffBBN_etaBBN: !import include/LCDM_dNeffCMB_dNeffBBN_etaBBN_scan.yaml
