--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -24,8 +24,9 @@
 Parameters:
  
  # --- import model parameters for models to scan over ---
- LCDM: !import include/LCDM_scan.yaml        # base LCDM
- #LCDM_ExtdNeffCMB: !import include/LCDM_ExtdNeffCMB_scan.yaml       
+ #LCDM: !import include/LCDM_scan.yaml        # base LCDM
+ 
+ LCDM_ExtdNeffCMB_ExtetaBBN: !import include/LCDM_ExtdNeffCMB_ExtetaBBN_scan.yaml    
  #LCDM_dNeffCMB: !import include/LCDM_dNeffCMB_scan.yaml
  #LCDM_dNeffCMB_dNeffBBN: !import include/LCDM_dNeffCMB_dNeffBBN_scan.yaml
  #LCDM_dNeffCMB_dNeffBBN_etaBBN: !import include/LCDM_dNeffCMB_dNeffBBN_etaBBN_scan.yaml
@@ -197,6 +198,12 @@ Rules:
       correlation_matrix: [[1.0,0.2],[0.2,1.0]]
       relative_errors: [1e-3,1e-2]
       elements: [Yp,D]
+
+  - capability: external_dNeff_etaBBN
+    options:
+      grid_size: 3000
+      max_iter: 8
+
 
 #======== Logging setup ========
 Logger:
