Updated CosmoBit_testCosmo yaml file (capability Omega_0 -> Omega0_m)

--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -26,10 +26,9 @@ Parameters:
  # --- import model parameters for models to scan over ---
  #LCDM: !import include/LCDM_scan.yaml        # base LCDM
  
- LCDM_ExtdNeffCMB_ExtetaBBN: !import include/LCDM_ExtdNeffCMB_ExtetaBBN_scan.yaml    
  #LCDM_dNeffCMB: !import include/LCDM_dNeffCMB_scan.yaml
  #LCDM_dNeffCMB_dNeffBBN: !import include/LCDM_dNeffCMB_dNeffBBN_scan.yaml
- #LCDM_dNeffCMB_dNeffBBN_etaBBN: !import include/LCDM_dNeffCMB_dNeffBBN_etaBBN_scan.yaml
+ LCDM_dNeffCMB_dNeffBBN_etaBBN: !import include/LCDM_dNeffCMB_dNeffBBN_etaBBN_scan.yaml
 
  # neutrino masses
  StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
@@ -133,7 +132,7 @@ ObsLikes:
     type:         double
 
   - purpose:      Observable
-    capability:   Omega_m
+    capability:   Omega0_m
     module:       CosmoBit
     type:         double
 
