--- a/yaml_files/CosmoBit_testDecay.yaml
+++ b/yaml_files/CosmoBit_testDecay.yaml
@@ -114,7 +114,7 @@ ObsLikes:
     type:         double
 
   - purpose:      Observable
-    capability:   Omega_m
+    capability:   Omega0_m
     module:       CosmoBit
     type:         double
 
