Updated rng entry in spartan.yaml to match the new syntax.
	modified:   yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -100,7 +100,9 @@ KeyValues:
 
   default_output_path: "runs/spartan"
 
-  rng: ranlux48
+  rng:
+    generator: ranlux48
+    seed: -1
 
   print_timing_data: true
 
