--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -46,7 +46,9 @@ Parameters:
      range: [1.0E-13, 1.0]
      prior_type: log
    thetai: 0.0
-   xi: 0.0
+   Ya0:
+     range: [1.0E-15, 1.0E-3]
+     prior_type: log
 
 #======== Prior setup ========
 Priors:
@@ -144,6 +146,9 @@ ObsLikes:
 
 #======== Rule entries ========
 Rules:
+
+  - capability: DM_fraction
+    function: DM_fraction_CosmoALP
 
  
   - capability: BBN_LogLike
