Made ROOT, RestFrames and MPI support cmake variables consistent, and default to OFF for better OSX support (given the ubiquity of buggy homebrew bottles for ROOT and MPI).  The new options are WITH_MPI WITH_ROOT WITH_RESTFRAMES 	modified:   cmake/contrib.cmake 	modified:   cmake/optional.cmake 	modified:   yaml_files/CMSSM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -551,6 +551,11 @@ Rules:
           - TauDecays:mode = 0
           - TimeShower:pTmin = 2
 
+  # Choose to get cross-sections from the Monte Carlo
+  - capability: CrossSection
+    function: getMCxsec
+    module: ColliderBit
+
   # Choose ATLAS detector simulation and options.
   - capability: ATLASDetectorSim
     options:
