Additional cmake tweaks in support of Apple clang 	modified:   CMakeLists.txt 	modified:   cmake/backends.cmake 	modified:   cmake/optional.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,7 +307,7 @@ else()
     endif()
     message(FATAL_ERROR err_msg)
   else()
-    message(FATAL_ERROR "\nOpenMP libraries not found.  Your compiler installation seems to be broken."
+    message(FATAL_ERROR "\nOpenMP libraries not found.  Your compiler installation seems to be broken.")
   endif()
 endif()
 
