New Apple Clang omp cmake trickery 	modified:   ../CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,8 +286,9 @@ else()
 endif()
 
 # Check for OpenMP
-find_package(OpenMP)
+find_package(OpenMP QUIET)
 if (OPENMP_FOUND)
+  message("-- OpenMP found successfully")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
   if (NOT DEFINED OpenMP_Fortran_FLAGS)
@@ -296,16 +297,23 @@ if (OPENMP_FOUND)
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
 else()
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-    set(err_msg "\nOpenMP libraries not found.  You are using the Apple Clang compiler.  Please see"
-                "\nhttps://iscinumpy.gitlab.io/post/omp-on-high-sierra/ for installation instructions.")
-    if(${CMAKE_VERSION} VERSION_LESS 3.12.0)
-      set(err_msg "${err_msg}/nNote that because your version of cmake is older than 3.12.0, you must use"
-                  "\nall the command-line cmake switches listed under the 'classic method' on that page.")
+    find_program(BREW NAMES brew)
+    # This block modified from https://github.com/CLIUtils/cmake/blob/master/PatchOpenMPApple.cmake
+    if(BREW)
+      execute_process(COMMAND ${BREW} ls libomp RESULT_VARIABLE BREW_RESULT_CODE OUTPUT_QUIET ERROR_QUIET)
+      if(BREW_RESULT_CODE)
+        message(FATAL_ERROR "You are using the Apple Clang compiler, and have HomeBrew installed, but have not installed OpenMP. Please run \"brew install libomp\"")
+      else()
+        execute_process(COMMAND ${BREW} --prefix libomp OUTPUT_VARIABLE BREW_LIBOMP_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
+        set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
+        set(OpenMP_CXX_LIB_NAMES "omp")
+        set(OpenMP_omp_LIBRARY "${BREW_LIBOMP_PREFIX}/lib/libomp.dylib")
+        include_directories("${BREW_LIBOMP_PREFIX}/include")
+        message(STATUS "Using Homebrew libomp from ${BREW_LIBOMP_PREFIX}")
+      endif()
     else()
-      set(err_msg "${err_msg}/nNote that because your version of cmake is 3.12.0 or later, you do not need"
-                  "\nto pass any of the command-line cmake switches listed under 'classic method' on that page.")
+      message(FATAL_ERROR "\nOpenMP libraries not found. You are using the Apple Clang compiler. The easiest way to get OpenMP support for Apple Clang is to install it via HomeBrew. If you want to install it some other way, e.g. via MacPorts, you need to manually set -DOpenMP_CXX_FLAGS -DOpenMP_CXX_LIB_NAMES -DOpenMP_C_FLAGS -DOpenMP_C_LIB_NAMES -DOpenMP_omp_LIBRARY when invoking cmake.")
     endif()
-    message(FATAL_ERROR "${err_msg}")
   else()
     message(FATAL_ERROR "\nOpenMP libraries not found.  Your compiler installation seems to be broken.")
   endif()
