HDF5Printer2 auto-repair mechanism added (to repair length inconsistencies arising from hard shutdowns)

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -36,6 +36,7 @@ Printer:
     group: "/spartan"
     delete_file_on_restart: true
     buffer_length: 5
+    #disable_autorepair: true
 
   #printer: ascii
   #options:
