--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -66,7 +66,8 @@ Scanner:
       plugin: multinest
       like:  LogLike
       nlive: 2000
-      tol: 0.0001
+      #tol: 0.0001
+      tol: 0.1
 
     mcmc:
       plugin: great
