Updated yaml files (Rules for AlterBBN settings)
  * AlterBBN_modelinfo -> AlterBBN_SetIput

--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -166,7 +166,7 @@ Rules:
       DataFile:  SH0ES.dat
 
 
-  - capability: AlterBBN_modelinfo
+  - capability: AlterBBN_setInput
     options:
       failsafe: 1
       err: 0
