--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -199,7 +199,7 @@ Rules:
         output: "tCl pCl lCl mPk" # need to add matter power spectrum for sigma8 computation
         k_pivot: 0.05
 
-  - capability: AlterBBN_modelinfo
+  - capability: AlterBBN_setInput
     options:
       failsafe: 1
       err: 0
