HDF5Printer2 MPI finalisation now debugged. Need to check that it compiles and works correctly without MPI (i.e. in single process only mode), but otherwise should now be pretty safe to use. Need to test performance on Marconi to see if buffer merging before writing is required.

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -48,7 +48,7 @@ Printer:
 
 Scanner:
 
-  use_scanner: multinest
+  use_scanner: twalk
 
   scanners:
 
@@ -98,8 +98,8 @@ Rules:
 
   # None required, since no module dependencies to be resolved.
   - capability: normaldist_loglike   
-    options:
-        probability_of_validity: 0.9
+    #options:
+    #    probability_of_validity: 0.9
 
 Logger:
 
@@ -107,7 +107,7 @@ Logger:
     [Default]      : "default.log"
     [ExampleBit_A] : "ExampleBit_A.log"
     [Scanner]      : "Scanner.log"
-
+  #debug: true
 
 KeyValues:
 
