--- a/yaml_files/CMSSM_DS6_test.yaml
+++ b/yaml_files/CMSSM_DS6_test.yaml
@@ -16,17 +16,17 @@ Parameters:
   StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
 
   # Nuclear matrix parameters.
-#  nuclear_params_sigmas_sigmal:
-#    sigmas:
-#      range:  [19, 67]
-#    sigmal:
-#      range:  [31, 85]
-#    deltau:
-#      fixed_value:  0.842
-#    deltad:
-#      fixed_value: -0.427
-#    deltas:
-#      fixed_value: -0.085
+  nuclear_params_sigmas_sigmal:
+    sigmas:
+      range:  [19, 67]
+    sigmal:
+      range:  [31, 85]
+    deltau:
+      fixed_value:  0.842
+    deltad:
+      fixed_value: -0.427
+    deltas:
+      fixed_value: -0.085
 
   # SUSY parameters.
   CMSSM:
@@ -45,18 +45,19 @@ Parameters:
       range: [3.0, 70]
     SignMu: 1
 
+
   # Dark matter halo parameters.
-#  Halo_gNFW_rho0:
-#    rho0:
-#      range: [.2, .8]
-#    v0: 235.0
-#    vesc: 550.0
-#    vrot: 235.0
-#    rs: 20.0
-#    r_sun: 8.5
-#    alpha: 1
-#    beta: 3
-#    gamma: 1
+  Halo_gNFW_rho0:
+    rho0:
+      range: [.2, .8]
+    v0: 235.0
+    vesc: 550.0
+    vrot: 235.0
+    rs: 20.0
+    r_sun: 8.5
+    alpha: 1
+    beta: 3
+    gamma: 1
 
 
 Priors:
@@ -182,14 +183,14 @@ ObsLikes:
     - capability: lnL_oh2
       purpose:    LogLike
 
-    # - capability: lnL_FermiLATdwarfs
-    #   purpose:    LogLike
+#    - capability: lnL_FermiLATdwarfs
+#      purpose:    LogLike
 
 #    - capability: XENON100_2012_LogLikelihood
 #      purpose:    LogLike
 
-#    - capability: XENON1T_2018_LogLikelihood
-#      purpose:    LogLike
+    - capability: XENON1T_2018_LogLikelihood
+      purpose:    LogLike
 
 #    - capability: LUX_2016_LogLikelihood
 #      purpose:    LogLike
@@ -267,8 +268,8 @@ ObsLikes:
     - purpose:    Observable
       capability: mwimp
 
-#    - purpose:    Observable
-#      capability: sigmav
+    - purpose:    Observable
+      capability: sigmav
 
 #    - purpose:    Observable
 #      capability: sigma_SI_p
@@ -280,7 +281,7 @@ ObsLikes:
 #      capability: sigma_SD_p
 
 #    - purpose:    Observable
-#      capability: sigma_SD_n
+      capability: sigma_SD_n
 
     # - purpose:    Observable
     #   capability: bsgamma
@@ -350,9 +351,8 @@ Rules:
   - capability: RD_eff_annrate_DSprep_MSSM
     function: RD_annrate_DS6prep_MSSM_func
 
-# TB DISCUSS !!!!
-#  - capability: RD_eff_annrate
-#    function: RD_annrate_DS
+  - capability: RD_eff_annrate
+    function: RD_eff_annrate_DS
 
   - capability : RD_spectrum
     function: RD_spectrum_MSSM
@@ -363,8 +363,8 @@ Rules:
 
   # Make sure to use the correct halo initialization for DS6
 # DISCUSS !
-#  - capability: DarkSUSY_PointInit_LocalHalo
-#    function: DarkSUSY6_PointInit_LocalHalo_func
+  - capability: DarkSUSY_PointInit_LocalHalo
+    function: DarkSUSY6_PointInit_LocalHalo_func
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
   - capability: lnL_FermiLATdwarfs
