--- a/cmake/cmake_variables.hpp.in
+++ b/cmake/cmake_variables.hpp.in
@@ -37,6 +37,9 @@
 /// Compiler supports C++14 features
 #cmakedefine COMPILER_SUPPORTS_CXX14 1
 
+/// Compiler supports C++17 features
+#cmakedefine COMPILER_SUPPORTS_CXX17 1
+
 /// Found regex in STL
 #cmakedefine HAVE_REGEX_H 1
 
